--- a/_posts/2014-12-26-.md
+++ b/_posts/2014-12-26-.md
@@ -1,10 +1,45 @@
 ---
 layout: post
-title: "你好，世界"
-description: ""
-category: learn 
-tags: [blog,tech]
+title: "用 github+jekyll 搭建个人 blog"
+description: "你好，世界"
+category:  锤炼技能 
+tags: [博客,网络]
 ---
 {% include JB/setup %}
-{page.date|date_to_string}
- 这是博客的第一篇文章，我想趁自己还记得一些步骤的情况下，把我搭建个人空间的步骤记录下来，过程中参考了不少网络资料，我将把这些资料链接放到文章末尾。如果有什么新的技术，欢迎在文章末尾留言^_^
+
+本文笔记本配置：
+
+- 系统：OS X Yosemite version 10.10.1
+- 处理器：2.8 GHz Intel Core i7
+- 内存：4 GB 1333 MHz DDR3
+- 显卡：Intel HD Graphics 3000 384 MB
+
+ 这是博客的第一篇文章，我想趁自己还记得一些细节的情况下，把我搭建个人空间的步骤记录下来，过程中阅读了不少网络资料，我将把这些<!-- more -->资料链接放到文章中供大家学习参考。如果有什么建议和好的 idea，欢迎在文章末尾留言^_^
+ 
+----------    
+ 本文目录    
+ 
+1. #### <a href="#t1"> Why github+jekyll ?</a>
+ 
+1. #### <a href="#t2"> 申请 Github 账号</a>   
+ 
+2. #### <a href="#t3"> 安装 Jekyll</a>    
+
+----------    
+
+## <a name="t1">1. Why github+jekyll ?</a>
+
+>GitHub是一个用于使用Git版本控制系统的项目的基于互联网的存取服务。它是由GitHub公司（先前被称作用Logical Awesome）的开发者Chris Wanstrath, PJ Hyett, 和 Tom Preston-Werner 使用Ruby on Rails写成的。GitHub同时提供商业账户和为开源项目提供的免费账户。根据在2009年的Git用户调查，GitHub是最流行的Git存取站点。
+它提供了像 feeds，followers 和显示开发者们怎样在他们的版本库的版本上工作的网络图表。
+
+—— 源自[Reactor1379的博客](http://blog.csdn.net)
+
+> GitHub十分“给力”，不仅为程序员提供了免费源代码托管空间，还为程序员提供了一个社交平台，允许大家在GitHub上创建自己的博客网站或主页（github pages），而且免费，不限流量，还可以绑定自己的域名。不过遗憾的是，GitHub提供的主页实际上是基于GitHub的源代码实现的，所以只支持上传静态的网页，不能在上面创建真正的博客系统。不过，不幸中的万幸是，GitHub支持一种叫jekyll的静态页面转换引擎，也就是说只要上传符合jekyll规范的文件，GitHub会用这种模板引擎为你转化静态页面和网站。
+
+—— 源自[P_Chou的博客](http://www.pchou.info)
+
+## <a name="t2">2. 申请 Github 空间</a>
+
+进入 github, 点击右边中间的绿色按钮 new repository，然后可以看到下面的界面，repository name 填写你自己的 username.github.io（注意注意大小写一定要与你注册的用户名一致 这样才能保证浏览器输入username.github.io时直接访问你的博客）
+
+## <a name="t3">3. 安装 Jekyll</a>
