--- a/_posts/2014-12-26-.md
+++ b/_posts/2014-12-26-.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "用 github+jekyll 搭建个人 blog"
+title: "用 github + jekyll-bootstrap 搭建个人 blog"
 description: "你好，世界"
 category:  锤炼技能 
 tags: [博客,网络]
 ---
 {% include JB/setup %}
+_文/[甄谨言]({{site.url}}/zcontact.html)_
 
 本文笔记本配置：
 
@@ -16,30 +17,101 @@ tags: [博客,网络]
 
  这是博客的第一篇文章，我想趁自己还记得一些细节的情况下，把我搭建个人空间的步骤记录下来，过程中阅读了不少网络资料，我将把这些<!-- more -->资料链接放到文章中供大家学习参考。如果有什么建议和好的 idea，欢迎在文章末尾留言^_^
  
+ 
+ <a name="t"></a>
+ 
 ----------    
  本文目录    
  
 1. #### <a href="#t1"> Why github+jekyll ?</a>
- 
-1. #### <a href="#t2"> 申请 Github 账号</a>   
- 
-2. #### <a href="#t3"> 安装 Jekyll</a>    
+2. #### <a href="#t2"> 申请 Github 账号</a>   
+3. #### <a href="#t3"> 安装 Jekyll</a>    
+4. #### <a href="#t4"> 建立自己的 blog</a>    
 
 ----------    
 
-## <a name="t1">1. Why github+jekyll ?</a>
+## <a name="t1"></a>1. Why github+jekyll ?
 
->GitHub是一个用于使用Git版本控制系统的项目的基于互联网的存取服务。它是由GitHub公司（先前被称作用Logical Awesome）的开发者Chris Wanstrath, PJ Hyett, 和 Tom Preston-Werner 使用Ruby on Rails写成的。GitHub同时提供商业账户和为开源项目提供的免费账户。根据在2009年的Git用户调查，GitHub是最流行的Git存取站点。
-它提供了像 feeds，followers 和显示开发者们怎样在他们的版本库的版本上工作的网络图表。
+> 「 GitHub是一个用于使用Git版本控制系统的项目的基于互联网的存取服务。它是由GitHub公司（先前被称作用Logical Awesome）的开发者Chris Wanstrath, PJ Hyett, 和 Tom Preston-Werner 使用Ruby on Rails写成的。GitHub同时提供商业账户和为开源项目提供的免费账户。根据在2009年的Git用户调查，GitHub是最流行的Git存取站点。
+它提供了像 feeds，followers 和显示开发者们怎样在他们的版本库的版本上工作的网络图表。」
 
 —— 源自[Reactor1379的博客](http://blog.csdn.net)
 
-> GitHub十分“给力”，不仅为程序员提供了免费源代码托管空间，还为程序员提供了一个社交平台，允许大家在GitHub上创建自己的博客网站或主页（github pages），而且免费，不限流量，还可以绑定自己的域名。不过遗憾的是，GitHub提供的主页实际上是基于GitHub的源代码实现的，所以只支持上传静态的网页，不能在上面创建真正的博客系统。不过，不幸中的万幸是，GitHub支持一种叫jekyll的静态页面转换引擎，也就是说只要上传符合jekyll规范的文件，GitHub会用这种模板引擎为你转化静态页面和网站。
+> 「 GitHub十分“给力”，不仅为程序员提供了免费源代码托管空间，还为程序员提供了一个社交平台，允许大家在GitHub上创建自己的博客网站或主页（github pages），而且免费，不限流量，还可以绑定自己的域名。不过遗憾的是，GitHub提供的主页实际上是基于GitHub的源代码实现的，所以只支持上传静态的网页，不能在上面创建真正的博客系统。不过，不幸中的万幸是，GitHub支持一种叫jekyll的静态页面转换引擎，也就是说只要上传符合jekyll规范的文件，GitHub会用这种模板引擎为你转化静态页面和网站。」
 
 —— 源自[P_Chou的博客](http://www.pchou.info)
 
-## <a name="t2">2. 申请 Github 空间</a>
+这两段引文很清楚地表达了 Github 的特点，以及为什么我们要用 jekyll 转换引擎。程序猿可以通过 Github 来相互关注、交流，你可以在 Github 上把我的代码拷贝到你的 repository 里进行编辑使用，同时在我这边也可以看到你的修改，然后确定我是不是要采用你的方案，这给程序猿提供了便利。如果你拥有 Github 账户，并且想关注我地动态，欢迎点击下面的[Add me]按钮(在弹出的新页面里点击“Follow”即可)。接下来就直接讲解搭建博客流程。
+
+<form action="https://github.com/Adominick" align="left" target="_blank">
+    <input class="btn" type="submit" value="Add me">
+</form>
+
+<div align="right"><a href="#t">返回目录</a></div>
+
+## <a name="t2"></a>2. 申请 Github 空间  
+
+### 2.1 在 Github 空间生成网页
 
 进入 github, 点击右边中间的绿色按钮 new repository，然后可以看到下面的界面，repository name 填写你自己的 username.github.io（注意注意大小写一定要与你注册的用户名一致 这样才能保证浏览器输入username.github.io时直接访问你的博客）
 
-## <a name="t3">3. 安装 Jekyll</a>
+<img src="/images/githubjekyll.png" height="400" width="600" />
+
+进入你刚刚创建的new repository界面，点击右边的“setting”进入设置页，找到“github page”栏目，点击“Automatic page generator”，随便选择一个 layout，因为最后会删掉的。
+
+<img src="/images/githubpage.png" height="150" width="600" />
+
+### 2.2 从 Github 空间配置到本地
+
+我申请的主页为`Adominick.github.io`，即我的用户名叫 Adominick，我这里的示范是在 MAC 端，所用的 shell 是 bash，先将将当前目录 cd 到你想要clone 到的文件夹下，然后跟着我输入如下命令：
+
+    git clone http://github.com/Adominck/Adominick.github.io.git
+
+然后会在当前文件夹下生成一个命名为“Adominick.github.io”的文件夹，里面是你在 Github 空间生成的网页，之后我们就不需要管它了.
+
+<div align="right"><a href="#t">返回目录</a></div>
+
+## <a name="t3"></a>3. 安装 Jekyll 
+
+配置 jekyll 的时候，稍稍会麻烦点。先要安装 gem，确保 gem 是最新版的：
+
+    sudo gem install
+
+安装完 gem 之后，我们就可以用 gem 命令来 install jekyll 了，由于 GFW 的原因，我们需要改一下 gem 中的 source：
+
+    gem sources --remove http://rubygems.org/
+    gem sources -a http://ruby.taobao.org/
+    
+然后用`gem sources -l`查看现在的源列表
+
+	*** CURRENT SOURCES ***
+	http://ruby.taobao.org
+
+最后我们可以安装 jekyll 了
+
+	gem install jekyll
+
+Jekyll需要用到directory_watcher、liquid、open4、maruku和classifier这几个包，用上面的命令可以自动安装。Jekyll默认用maruku来解析markdown语言，你也可以用别的程序来解析，比如rdiscount或kramdown，都给装上吧：
+
+	gem install rdiscount kramdown
+
+<div align="right"><a href="#t">返回目录</a></div>
+
+## <a name="t4"></a>4. 用jekyll-bootstrap建立自己的 blog 
+
+接着去[jekyll-bootstrap](http://jekyllbootstrap.com/)网站找到自己喜欢的模板，clone 到你想要的文件夹下
+
+	git clone https://github.com/plusjade/jekyll-bootstrap.git
+
+然后删除 jekyll-bootstrap 的 git 信息
+
+	cd jekyll-bootstrap
+	rm -rf ./.git/
+
+把 jekyll-bootstrap 里面的内容全都拷贝到 Adominick.github.io 文件夹里。
+
+最后在本地修改你的网页，并且实时用 jekyll 查看到满意为止，上传到 Github 空间
+
+	jekyll serve
+
+<div align="right"><a href="#t">返回目录</a></div>
