--- a/_posts/2014-12-26-.md
+++ b/_posts/2014-12-26-.md
@@ -23,10 +23,10 @@ _文/[甄谨言]({{site.url}}/zcontact.html)_
 ----------    
  本文目录    
  
-1. #### <a href="#t1"> Why github+jekyll ?</a>
-2. #### <a href="#t2"> 申请 Github 账号</a>   
-3. #### <a href="#t3"> 安装 Jekyll</a>    
-4. #### <a href="#t4"> 建立自己的 blog</a>    
+1.  <a href="#t1"> Why github+jekyll ?</a>
+2.  <a href="#t2"> 申请 Github 账号</a>   
+3.  <a href="#t3"> 安装 Jekyll</a>    
+4.  <a href="#t4"> 建立自己的 blog</a>    
 
 ----------    
 
@@ -115,3 +115,22 @@ Jekyll需要用到directory_watcher、liquid、open4、maruku和classifier这几
 	jekyll serve
 
 <div align="right"><a href="#t">返回目录</a></div>
+
+##注意事项：
+
+###站点信息配置
+
+编辑`_config.yml`，`title`填上博客名字，个人信息往后填即可，不需要的注释掉。`production_url :`后的链接改成`http://uaername.github.io`;`comments :`是评论功能设置，`provider : disqus`，`short name`设置为用户名，这个需要稍后去disqus注册,如果不需要用 disqus 的功能，可以把 comments 注释掉;`analytics:`是网站运行情况分析，选google的就可以，`tracking_id`要换成在[Google Analytics](http://www.google.com/analytics)注册后给出的。
+
+## 可供参考学习的链接
+
+1. [jekyll文档](http://jekyllrb.com/docs)
+2. [jekyll quick start](http://jekyllbootstrap.com/usage/jekyll-quick-start.html)
+1. [realasking的博客](http://realasking.github.io/)
+2. [图灵社区的一篇文章](http://www.ituring.com.cn/article/114888)
+3. [JavaChen's Blog](http://blog.javachen.com/)
+4. [theloverz's Blog](http://theloverz.me/)
+5. [erjjones's Blog](http://erjjones.github.io/)
+6. [pchou's Blog](http://www.pchou.info/)
+7. [Building Static Sites with Jekyll](http://code.tutsplus.com/tutorials/building-static-sites-with-jekyll--net-22211)
+8. [雁起平沙的网络日志](http://yanping.me/cn/blog/2012/03/18/github-pages-step-by-step/)
