--- a/_posts/2014-12-26-.md
+++ b/_posts/2014-12-26-.md
@@ -134,3 +134,10 @@ Jekyll需要用到directory_watcher、liquid、open4、maruku和classifier这几
 6. [pchou's Blog](http://www.pchou.info/)
 7. [Building Static Sites with Jekyll](http://code.tutsplus.com/tutorials/building-static-sites-with-jekyll--net-22211)
 8. [雁起平沙的网络日志](http://yanping.me/cn/blog/2012/03/18/github-pages-step-by-step/)
+9. [阳志平的博客](http://www.yangzhiping.com/)
+10. [skydark's Blog](http://blog.skydark.info/)
+11. [刘兰涛的技术博客](http://blog.liulantao.com/)
+12. [Havee's Space](http://havee.me/)
+13. [MythArcher Yan](http://yanjunyi.com/)
+14. [Truongtx's Blog](http://truongtx.me/)
+15. [liberize's blog](http://liberize.me/)
