--- a/_posts/2014-12-26-.md
+++ b/_posts/2014-12-26-.md
@@ -6,8 +6,7 @@ category:  锤炼技能
 tags: [博客,网络]
 ---
 {% include JB/setup %}
-_文/[甄谨言]({{site.url}}/zcontact.html)_
-
+_文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
 本文笔记本配置：
 
 - 系统：OS X Yosemite version 10.10.1
@@ -141,3 +140,5 @@ Jekyll需要用到directory_watcher、liquid、open4、maruku和classifier这几
 13. [MythArcher Yan](http://yanjunyi.com/)
 14. [Truongtx's Blog](http://truongtx.me/)
 15. [liberize's blog](http://liberize.me/)
+16. [loftor's blog](http://loftor.com/)
+
