--- a/_posts/2014-12-29-goagent.md
+++ b/_posts/2014-12-29-goagent.md
@@ -23,7 +23,7 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
 sudo easy_install pycrypto
 ```
 
-如果返回信息为
+`如果返回信息为`
 
 > Address already used
 
