--- a/_posts/2014-12-26-.md
+++ b/_posts/2014-12-26-.md
@@ -141,4 +141,5 @@ Jekyll需要用到directory_watcher、liquid、open4、maruku和classifier这几
 14. [Truongtx's Blog](http://truongtx.me/)
 15. [liberize's blog](http://liberize.me/)
 16. [loftor's blog](http://loftor.com/)
+17. [旧blog迁移到jekyll+github](http://jser.me/2013/07/28/%E6%97%A7blog%E8%BF%81%E7%A7%BB%E5%88%B0jekyll+github.html)
 
