--- a/_posts/2014-12-30-host.md
+++ b/_posts/2014-12-30-host.md
@@ -42,3 +42,4 @@ OSX 用户请先用 Homebrew 安装 wget
 
 [有用的链接1](https://github.com/txthinking/google-hosts)
 [有用的链接2](https://code.google.com/p/smarthosts/wiki/installation)
+[有用的链接3](https://code.google.com/p/openwrt-smarthosts-autoddvpn/)
