--- a/_posts/2015-01-19-chmod.md
+++ b/_posts/2015-01-19-chmod.md
@@ -13,8 +13,11 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
  
 ---
 本文目录
+
 1.  <a href="#t1">权限管理基本概念</a>
+
 2.  <a href="#t2">chmod 使用方法</a>
+
 3.  <a href="#t3">例子</a>
  
 ---
@@ -26,7 +29,7 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
  
   例如我在远程输入：
   
-  <pre><code>ls -l</pre></code>
+  <pre><code>ls -l</code></pre>
   
    就会得到文件、文件夹类别，各组员权限，创建者，服务器，文件大小，创建时间，文件名及扩展名等信息。
    
