--- a/_posts/2015-01-19-chmod.md
+++ b/_posts/2015-01-19-chmod.md
@@ -29,11 +29,11 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
  
   例如我在远程输入：
   
-  <pre><code>ls -l</code></pre>
+<pre><code>ls -l</code></pre>
   
    就会得到文件、文件夹类别，各组员权限，创建者，服务器，文件大小，创建时间，文件名及扩展名等信息。
    
-   <pre><code>drwx------ 2 liubin labmem       4096 Jan 18 21:08 personal</pre></code>
+<pre><code>drwx------ 2 liubin labmem       4096 Jan 18 21:08 personal</pre></code>
    
    这就是说只有用户组有读写执行权限。
  
@@ -44,12 +44,12 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
  
 ## <a name="t3"></a>例子
 
-  <pre><code>$ chmod 644 test.txt
+<pre><code>$ chmod 644 test.txt
 　$ ls –l</pre></code>
 
 　　即设定文件test.txt的属性为：
 
-　<pre><code>-rw-r--r-- 1 inin users 1155 Nov 5 11:22 mm.txt</pre></code>
+　<pre><code>-rw-r--r-- 1 inin users 1155 Nov 5 11:22 test.txt</pre></code>
 
 文件属主（u）inin 拥有读、写权限
 
