--- a/_posts/2015-01-19-chmod.md
+++ b/_posts/2015-01-19-chmod.md
@@ -36,7 +36,7 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
   
    就会得到文件、文件夹类别，各组员权限，创建者，服务器，文件大小，创建时间，文件名及扩展名等信息。
    
-<pre><code>drwx------ 2 liubin labmem       4096 Jan 18 21:08 personal</pre></code>
+<pre><code>drwx------ 2 liubin labmem       4096 Jan 18 21:08 personal</code></pre>
    
    这就是说只有用户组有读写执行权限。
  
@@ -48,11 +48,11 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
 ## <a name="t3"></a>例子
 
 <pre><code>$ chmod 644 test.txt
-　$ ls –l</pre></code>
+　$ ls –l</code></pre>
 
 　　即设定文件test.txt的属性为：
 
-　<pre><code>-rw-r--r-- 1 inin users 1155 Nov 5 11:22 test.txt</pre></code>
+　<pre><code>-rw-r--r-- 1 inin users 1155 Nov 5 11:22 test.txt</code></pre>
 
 文件属主（u）inin 拥有读、写权限
 
@@ -64,6 +64,6 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
 
 <pre><code>chmod  777 /usres/test
 $ ls –l
--rwxrwxrwx 1 inin users 44137 Nov 12 9:22 test</pre></code>
+-rwxrwxrwx 1 inin users 44137 Nov 12 9:22 test</code></pre>
  
 <div align="right"><a href="#t">返回目录</a></div>
