--- a/_posts/2014-12-29-goagent.md
+++ b/_posts/2014-12-29-goagent.md
@@ -1,4 +1,4 @@
----
+﻿---
 layout: post
 title: "Mac下GoAgent安装教程"
 description: ""
@@ -67,3 +67,8 @@ PID   COMMAND      %CPU TIME     #TH  #WQ  #PORT MEM    PURG   CMPRS  PGRP PPID
 sudo kill 5297 # PID 5297 python process
 </code></pre>
 
+可供参考的链接：
+
+* chrome相关下载地址：<http://yun.baidu.com/s/1i3orYsP>
+* [goagent/goagent · GitHub](https://github.com/goagent/goagent)
+* [goagent/InstallGuide.md at wiki · goagent/goagent · GitHub](https://github.com/goagent/goagent/blob/wiki/InstallGuide.md)
