--- a/_posts/2014-12-29-goagent.md
+++ b/_posts/2014-12-29-goagent.md
@@ -1,6 +1,6 @@
 ﻿---
 layout: post
-title: "Mac下GoAgent安装教程"
+title: "GoAgent安装教程"
 description: ""
 category: 锤炼技能
 tags: [goagent, 翻墙]
@@ -19,11 +19,11 @@ _文/<a href="{{site.url}}/zcontact.html" style="color:grey">甄谨言</a>_
 
 则可以在终端输入
 
-```
+<pre><code>
 sudo easy_install pycrypto
-```
+</code></pre>
 
-`如果返回信息为`
+如果返回信息为
 
 > Address already used
 
